--- a/index.html
+++ b/index.html
@@ -21,10 +21,61 @@
         <h1>შეიძინე ხარისხიანი ოქროს სამკაული</h1>
      </div>
      <div>
-    
+      <div class="main2">
+        <div class="left">
+        <h1>სამაჯური</h1>
+        <h3>უფასო მიტანა მთელი საქართველოს მაშტაბით</h3>
+        <button class="main2_btn">შესაძენად ეწვიეთ fb-ს</button>
+        </div>
+        <div class="right">
+            <img src="images/bracelet.webp" alt="bracelet">
+        </div>
+      </div>
+
+      <div class="main3">
+        <div class="choose"><a href="rings.html">
+            <img class="category" src="images/ring.avif" alt="">
+            <h3>ბეჭედი</h3></a>
+        </div>
+        <div class="choose"><a href="">
+            <img class="category" src="images/gold earing.jpg" mode="">
+            <h3>საყურე</h3></a>
+        </div>
+        <div class="choose"><a href="">
+            <img class="category" src="images/bracelet 1.webp" alt="">
+            <h3>სამაჯური</h3></a>
+        </div>
+        <div class="choose"><a href="">
+            <img class="category" src="images/chain.jpg" alt="">
+            <h3>ყელსაბამი</h3></a>
+        </div>
+      </div>
    </main>
 
-
+   <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h4>ჩვენს შესახებ</h4>
+        <p>ხარისხიანი ოქროს სამკაულების საუკეთესო არჩევანი</p>
+      </div>
+      <div class="footer-section">
+        <h4>ბმულები</h4>
+        <ul>
+          <li><a href="">მთავარი გვერდი</a></li>
+          <li><a href="">კატეგორიები</a></li>
+          <li><a href="">დაგვეკონტაქტე</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>კონტაქტი</h4>
+        <p>ტელ: +995 5XX XXX XXX</p>
+        <p>ემეილი: info@jewelry.ge</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2026 ოქროს სამკაულები. ყველა უფლება დაცულია.</p>
+    </div>
+   </footer>
 
  
     <script src="main.js"></script>
