--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img class="category" src="images/ring.avif" alt="">
             <h3>ბეჭედი</h3></a>
         </div>
-        <div class="choose"><a href="">
+        <div class="choose"><a href="earrings.html">
             <img class="category" src="images/gold earing.jpg" mode="">
             <h3>საყურე</h3></a>
         </div>
