--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ოქროს სამკაულები</title>
 </head>
 <body>
     <header>
         <div class="Logo">
-           <a href=""> <img src="images/jevewrly Logo.avif" alt="gold Logo"></a>
+           <a href="index.html"> <img src="images/jevewrly Logo.avif" alt="gold Logo"></a>
         </div>
         <div class="nav"> 
             <h3><a href="">ჩვენს შესახებ</a></h3>
