--- a/bracelet.html
+++ b/bracelet.html
@@ -18,58 +18,54 @@
     </header>
 
     <main class="rings">
-        <h1>საყურე</h1>
+        <h1>ბეჭდები</h1>
         <div class="ring_divs">
             <div class="ring_column">
                 <div class="ring">
-                    <img src="images/earring1.webp" alt="">
-                    <h3>საყურე J 201</h3>
+                    <img src="images/bracelet2.webp" alt="">
+                    <h3>სამაჯური R 543</h3>
                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring2.jpg" alt="">
-                    <h3>საყურე J 205</h3>
+                    <img src="images/bracelet3.webp" alt="">
+                    <h3>სამაჯური R 545</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring3.jpg" alt="">
-                    <h3>საყურე J 212</h3>
+                    <img src="images/bracelet4.jpg" alt="">
+                    <h3>სამაჯური R 547</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
             </div>
             <div class="ring_column">
                 <div class="ring">
-                    <img src="images/earring4.jpg" alt="">
-                    <h3>საყურე J 215</h3>
+                    <img src="images/bracelet5.jpg" alt="">
+                    <h3>სამაჯური R 551</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring5.jpg" alt="">
-                    <h3>საყურე J 218</h3>
+                    <img src="images/bracelet change.jpg" alt="">
+                    <h3>სამაჯური R 554</h3>
                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring6.webp" alt="">
-                    <h3>საყურე J 221</h3>
+                    <img src="images/bracelet7.webp" alt="">
+                    <h3>სამაჯური R 556</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
             </div>
             <div class="ring_column">
                 <div class="ring">
-                    <img src="images/earring7.webp" alt="">
-                    <h3>საყურე J 222</h3>
+                    <img src="images/bracelet8.webp" alt="">
+                    <h3>სამაჯური R 559</h3>
                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring8.jpg" alt="">
-                    <h3>საყურე J 227</h3>
+                    <img src="images/bracelet9.jpg" alt="">
+                    <h3>სამაჯური R 660</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
-                <div class="ring">
-                    <img src="images/earring9.webp" alt="">
-                    <h3>საყურე J 229</h3>
-                    <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
-                </div>
+               
             </div>
         </div> 
               
