--- a/chain.html
+++ b/chain.html
@@ -18,56 +18,39 @@
     </header>
 
     <main class="rings">
-        <h1>საყურე</h1>
+        <h1>ბეჭდები</h1>
         <div class="ring_divs">
             <div class="ring_column">
                 <div class="ring">
-                    <img src="images/earring1.webp" alt="">
-                    <h3>საყურე J 201</h3>
-                    <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
-                </div>
-                <div class="ring">
-                    <img src="images/earring2.jpg" alt="">
-                    <h3>საყურე J 205</h3>
+                    <img src="images/chain2.jpg" alt="">
+                    <h3>ყელსაბამი Q 103</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring3.jpg" alt="">
-                    <h3>საყურე J 212</h3>
-                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
-                </div>
-            </div>
-            <div class="ring_column">
-                <div class="ring">
-                    <img src="images/earring4.jpg" alt="">
-                    <h3>საყურე J 215</h3>
+                    <img src="images/chain1.jpg" alt="">
+                    <h3>ყელსაბამი Q 104</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring5.jpg" alt="">
-                    <h3>საყურე J 218</h3>
-                    <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
-                </div>
-                <div class="ring">
-                    <img src="images/earring6.webp" alt="">
-                    <h3>საყურე J 221</h3>
+                    <img src="images/chain3.jpg" alt="">
+                    <h3>ყელსაბამი Q 106</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
             </div>
             <div class="ring_column">
                 <div class="ring">
-                    <img src="images/earring7.webp" alt="">
-                    <h3>საყურე J 222</h3>
-                    <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
-                </div>
-                <div class="ring">
-                    <img src="images/earring8.jpg" alt="">
-                    <h3>საყურე J 227</h3>
+                    <img src="images/chain4.jpg" alt="">
+                    <h3>ყელსაბამი Q 112</h3>
                      <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
                 <div class="ring">
-                    <img src="images/earring9.webp" alt="">
-                    <h3>საყურე J 229</h3>
+                    <img src="images/chain5.jpg" alt="">
+                    <h3>ყელსაბამი Q 109</h3>
+                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
+                </div>
+                <div class="ring">
+                    <img src="images/chain6.png" alt="">
+                    <h3>ყელსაბამი Q 131</h3>
                     <button class="fb">შესაძენად ეწვიეთ fb-გვერდს</button>
                 </div>
             </div>
