--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <img class="category" src="images/gold earing.jpg" mode="">
             <h3>საყურე</h3></a>
         </div>
-        <div class="choose"><a href="">
+        <div class="choose"><a href="bracelet.html">
             <img class="category" src="images/bracelet 1.webp" alt="">
             <h3>სამაჯური</h3></a>
         </div>
-        <div class="choose"><a href="">
+        <div class="choose"><a href="chain.html">
             <img class="category" src="images/chain.jpg" alt="">
             <h3>ყელსაბამი</h3></a>
         </div>
