--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
            <a href="index.html"> <img src="images/jevewrly Logo.avif" alt="gold Logo"></a>
         </div>
         <div class="nav"> 
-            <h3><a href="">ჩვენს შესახებ</a></h3>
-            <h3><a href="">დაგვეკონტაქტე</a></h3>
+            <h3><a href="about.html">ჩვენს შესახებ</a></h3>
+            <h3><a href="contact.html">დაგვეკონტაქტე</a></h3>
         </div>
     </header>
    <main>
